made unit_type bp

--- a/flask_app/app/templates/auth/detail.html
+++ b/flask_app/app/templates/auth/detail.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>User Detail</h1>
-    <div>
+    <h1 class="text-center">{{ title }}</h1>
+    <div class="container">
         <p><strong>Username:</strong> {{ user.username }}</p>
-        <p><strong>Email:</strong> {{ user.email }} </p> <!-- Assuming you might want to show the email -->
-        <p><strong>Password Hash:</strong> {{ user.password_hash }}</p> <!-- Reminder: Exposing password hashes in UI is not recommended -->
         <p><strong>Admin:</strong> {{ user.is_admin }}</p>
-        <!-- Add more user details as needed -->
+        <a href="{{ url_for('auth.change_username') }}" class="btn btn-primary">Change Username</a>
+        <a href="{{ url_for('auth.change_password') }}" class="btn btn-secondary">Change Password</a>
+        <a href="{{ url_for('auth.delete') }}" class="btn btn-danger">Delete Account</a>
     </div>
 {% endblock %}
