--- a/flask_app/app/templates/base.html
+++ b/flask_app/app/templates/base.html
@@ -35,6 +35,12 @@
                                     <li class="nav-item">
                                         <a class="nav-link active" href="{{ url_for('offers.offers_list') }}">Offers</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="{{ url_for('companies.companies_list') }}">Companies</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="{{ url_for('contacts.contacts_list') }}">Contacts</a>
+                                    </li>
                                 </ul>
                                 <ul class="navbar-nav">
                                     {% if current_user.is_admin %}
