--- a/flask_app/app/templates/contacts/contacts_list.html
+++ b/flask_app/app/templates/contacts/contacts_list.html
@@ -7,7 +7,7 @@
 <h1 class="text-center">{{ title }}</h1>
 {% if current_user.is_admin %}
 <div class="text-center">
-    <a href="{{ url_for('contacts.make_contact') }}" class="btn btn-primary m-1" >Register Contact</a>
+    <a href="{{ url_for('contacts.make_contact', company_id=company_id) }}" class="btn btn-primary m-1" >Register Contact</a>
 </div>
 {% endif %}
 
