--- a/flask_app/app/templates/unit_types/make_unit_type.html
+++ b/flask_app/app/templates/unit_types/make_unit_type.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %} {{ title }} {% endblock %}
 
 {% block content %}
     <div class="container">
         <h1 class="text-center">{{ title }}</h1>
-        <form method="POST" action="{{ url_for('.make_company') }}" class="mt-4">
+        <form method="POST" action="{{ url_for('.make_unit_type') }}" class="mt-4">
             {{ form.hidden_tag() }}
 
             <div class="mb-3">
