--- a/flask_app/app/templates/offers/delete_offer.html
+++ b/flask_app/app/templates/offers/delete_offer.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <h2 class="text-center">Delete Offer {{ offer.label }}</h2>
-    <form method="POST" action="{{ url_for('.delete_insurance', offer_id=offer.id) }}" class="form">
+    <form method="POST" action="{{ url_for('.delete_offer', offer_id=offer.id) }}" class="form">
         {{ form.hidden_tag() }}
         <p class="text-center">Are you sure you want to delete your offer?</p>
         <p class="text-center">{{ form.submit(class="btn btn-danger") }}</p>
