--- a/flask_app/app/templates/insurances/insurances_list.html
+++ b/flask_app/app/templates/insurances/insurances_list.html
@@ -40,6 +40,7 @@
             <td>
                 <a href="{{ url_for('settlements.settlement_list', insurance_id=insurance.id) }}" class="btn btn-primary">Settlements</a>
                 <a href="{{ url_for('offers.offers_list', insurance_id=insurance.id) }}" class="btn btn-primary">Offers</a>
+                <a href="{{ url_for('insurances.update_insurance', insurance_id=insurance.id) }}" class="btn btn-secondary">Edit</a>
                 <a href="{{ url_for('insurances.delete_insurance', insurance_id=insurance.id) }}" class="btn btn-danger">Delete</a>
             </td>
             <td>{{ insurance.unit_type.name }}</td>
