--- a/flask_app/app/templates/insurances/make_insurance.html
+++ b/flask_app/app/templates/insurances/make_insurance.html
@@ -4,8 +4,16 @@
 
 {% block content %}
     <div class="container">
+        {% if insurance %}
+        <h1 class="text-center">{{ title }} for {{ insurance.label }}</h1>
+        {% else %}
         <h1 class="text-center">{{ title }}</h1>
+        {% endif %}
+        {% if update %}
+        <form method="POST" action="{{ url_for('.update_insurance', insurance_id=insurance.id) }}" class="mt-4">
+        {% else %}
         <form method="POST" action="{{ url_for('.make_insurance') }}" class="mt-4">
+        {% endif %}
             {{ form.hidden_tag() }}
             <div class="mb-3">
                 {{ form.label.label(class="form-label") }}
@@ -32,7 +40,7 @@
                 {{ form.company_id(class="form-select", id="company_id") }}
             </div>
             
-            {{ form.submit(class="btn btn-primary mb-3") }}
+            {{ form.submit(class="btn btn-primary mb-3", value=title) }}
         </form>
     </div>
 {% endblock %}
