added edit for offers

--- a/flask_app/app/templates/offers/offers_list.html
+++ b/flask_app/app/templates/offers/offers_list.html
@@ -39,6 +39,7 @@
             <tr>
                 <td>{{ offer.label }}</td>
                 <td>
+                    <a href="{{ url_for('offers.update_offer', offer_id=offer.id) }}" class="btn btn-secondary">Edit</a>
                     <a href="{{ url_for('offers.delete_offer', offer_id=offer.id) }}" class="btn btn-danger">Delete</a>
                 </td>
                 <td>{{ offer.price }}</td>
