--- a/flask_app/app/templates/companies/companies_list.html
+++ b/flask_app/app/templates/companies/companies_list.html
@@ -4,9 +4,11 @@
 
 {% block content %}
     <h1 class="text-center">{{title}}</h1>
+    {% if current_user.is_admin %}
     <div class="text-center">
         <a href="{{ url_for('companies.make_company')}}" class="btn btn-primary">Make company</a>
     </div>
+    {% endif %}
     <ul class="list-group mt-3">
         {% for company in companies %}
             <a href="{{ url_for('contacts.contacts_list', company_id=company.id) }}"><li class="list-group-item">{{ company.name }}</li></a>
